Update to 1.20.6 -- Still WIP, not everything is working yet